--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
 	--secondary-color: #2780ed;
 	--warning-color: #f17228;
 	--gray-50--color: #fcfcfc;
-	--gray-100--color: #f5f5f5;
+	--gray-100--color: var(--gray-100--color);
 	--gray-200--color: #eeeeee;
 	--gray-300--color: #e0e0e0;
 	--gray-400--color: #bdbdbd;
@@ -147,17 +147,17 @@ header section {
 
 header section .wrapper {
 	width: 77%;
+	height: 60vh;
 	margin: 0 auto;
 
-	display: flex;
-	justify-content: space-between;
+	/* display: flex;
+	justify-content: space-between; */
+
+	display: grid;
+	grid-template-columns: 3fr 2.5fr;
 }
 
 /* left */
-
-header section .wrapper {
-	height: 60vh;
-}
 
 header section .wrapper .left {
 	align-self: center;
@@ -165,8 +165,7 @@ header section .wrapper .left {
 
 /* right */
 header section .wrapper img {
-	width: 40%;
-	/* height: 75%; */
+	width: 100%;
 	object-fit: contain;
 
 	align-self: flex-end;
@@ -200,14 +199,13 @@ header section .wrapper .left .order-card {
 	border-radius: 16px;
 
 	margin-top: 32px;
-	width: 125%;
 }
 
 header section .wrapper .left .order-card .top {
 	display: flex;
 	align-items: center;
 
-	border-bottom: 1px solid #eeeeee;
+	border-bottom: 1px solid var(--gray-200--color);
 }
 header section .wrapper .left .order-card .top .left {
 	display: flex;
@@ -231,7 +229,7 @@ header section .wrapper .left .order-card .top .left a {
 	font-weight: bold;
 	font-size: 18px;
 	line-height: 100%;
-	color: #f17228;
+	color: var(--warning-color);
 	margin-left: 10px;
 }
 header section .wrapper .left .order-card .top .right {
@@ -252,7 +250,7 @@ header section .wrapper .left .order-card .top .right a {
 	font-weight: bold;
 	font-size: 18px;
 	line-height: 100%;
-	color: #757575;
+	color: var(--gray-600--color);
 	margin-left: 10px;
 }
 
@@ -280,7 +278,7 @@ header section .wrapper .left .order-card .bottom .input-field img {
 header section .wrapper .left .order-card .bottom .input-field input {
 	width: 100%;
 
-	background: #f5f5f5;
+	background: var(--gray-100--color);
 	border-radius: 8px;
 	border: none;
 	outline: none;
@@ -294,7 +292,7 @@ header section .wrapper .left .order-card .bottom .input-field input::placeholde
 	font-weight: normal;
 	font-size: 18px;
 	line-height: 140%;
-	color: #9e9e9e;
+	color: var(--gray-500--color);
 }
 
 header section .wrapper .left .order-card .bottom .btn {
@@ -320,5 +318,5 @@ header section .wrapper .left .order-card .bottom .btn a {
 	font-size: 18px;
 	line-height: 100%;
 	text-align: center;
-	color: #ffffff;
+	color: var(--white-color);
 }
