--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,10 @@ a {
 	text-decoration: none;
 }
 
+li {
+	list-style-type: none;
+}
+
 /* HEADER */
 
 nav {
@@ -319,4 +323,111 @@ header section .wrapper .left .order-card .bottom .btn a {
 	line-height: 100%;
 	text-align: center;
 	color: var(--white-color);
+}
+
+/* DEALS */
+
+.deals {
+	padding: 80px 0;
+	background-color: var(--white-color);
+}
+
+.deals .wrapper {
+	width: 77%;
+	margin: 0 auto;
+}
+
+.deals .wrapper .deals__list {
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+
+	column-gap: 15px;
+}
+
+.deals .wrapper .deals__list .deals__list--items {
+	cursor: pointer;
+}
+
+.deals .wrapper .deals__list .top {
+	position: relative;
+}
+.deals .wrapper .deals__list .top .discount {
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	background-color: #ffb30e;
+	border-radius: 0px 32px 0px 0px;
+	padding: 10px 14px;
+
+	display: flex;
+}
+.deals .wrapper .deals__list .top .discount .discount_price {
+	font-family: Source Sans Pro;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 68px;
+	line-height: 106%;
+	color: #ffffff;
+}
+.deals .wrapper .deals__list .top .discount .discount_percent {
+	font-family: Source Sans Pro;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 30px;
+	line-height: 120%;
+	color: #ffffff;
+}
+.deals .wrapper .deals__list .top .discount .discount_off {
+	font-family: Source Sans Pro;
+	font-style: normal;
+	font-weight: lighter;
+	font-size: 18px;
+	line-height: 120%;
+	color: #ffffff;
+}
+
+.deals .wrapper .deals__list .top .discount .discount-right {
+	display: flex;
+	flex-direction: column;
+}
+
+.deals .wrapper .deals__list .top img {
+	border-radius: 8px;
+	width: 100%;
+}
+
+.deals .wrapper .deals__list .bottom {
+	margin-top: 22px;
+}
+
+.deals .wrapper .deals__list .bottom .items__text {
+	margin-bottom: 10px;
+
+	font-family: Source Sans Pro;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 22px;
+	line-height: 120%;
+
+	color: #424242;
+}
+
+.deals .wrapper .deals__list .bottom .items__badge {
+	font-family: Source Sans Pro;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 22px;
+	line-height: 120%;
+	color: #f17228;
+
+	background: rgba(241, 114, 40, 0.2);
+	border-radius: 8px;
+
+	padding: 8px 16px;
+}
+
+/* WORKS */
+
+.works {
+	background: linear-gradient(180deg, rgba(255, 206, 103, 0.22) -42.47%, rgba(253, 237, 202, 0) 100%);
 }
